2005-01-20  Dalibor Topic  <robilad@kaffe.org>

	* config/arm/linux/config.frag (CFLAGS):
	Added -fno-omit-frame-pointer.

	Reported by:  Jari Korva <jpkorva@iki.fi>

2005-01-20  Dalibor Topic  <robilad@kaffe.org>

	* config/arm/jit-arm.def,
	config/arm/jit3-arm.def,
	config/mips/jit3-mips.def,
	config/powerpc/jit3-powerpc.def,
	kaffe/kaffevm/jit/labels.c,
	kaffe/kaffevm/jit3/labels.c:
	Finished prefixing setEpilogueLabel with KaffeJIT(3).

	Reported by:  Kiyo Inaba  <inaba@src.ricoh.co.jp>

2005-01-20  Dalibor Topic  <robilad@kaffe.org>

	* test/regression/InnerTest.java, 
	test/regression/TestSerialFields.java,
	test/regression/TestSerialPersistent.java,
	test/regression/TestSerialVersions.java:
	Adapated expected output to match the one from jikes.

2005-01-20  Dalibor Topic  <robilad@kaffe.org>

	* test/regression/TestScript.in, 
	Makefile.am (BUILD_ENVIRONMENT-make): Removed JAVAX_CRYPTO_JAR.	

	* test/regression/TestScript.in: Use jikes for regression tests as well.
	
2005-01-20  Dalibor Topic  <robilad@kaffe.org>

	* FAQ/FAQ.classlibrary-compile: Changed recommended version of jikes 
	to jikes 1.21.

	* Makefile.am (BUILD_ENVIRONMENT-make): Remove kjc.jar from 
	BOOTCLASSPATH.

	* kaffe/scripts/kaffe.in: Removed kjc.jar from bootclasspath.

	* libraries/javalib/Makefile.am.in (toolsjar_DATA): Removed.

	* configure.ac: Use jikes by default. Abort if no compiler found.

2005-01-20  Dalibor Topic  <robilad@kaffe.org>

	* THIRDPARTY (kjc): Removed section.

2005-01-20  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/kjc.jar: Removed.
	
2005-01-18  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	
	2005-01-18  Jeroen Frijters  <jeroen@frijters.net>

	* java/io/Externalizable.java,
	java/io/Serializable.java
	(serialVersionUID): Removed.
	* java/rmi/server/RemoteObject.java,
	java/rmi/server/UID.java
	(serialVersionUID): Made private.
	* java/rmi/server/RemoteRef.java,
	java/rmi/server/ServerRef.java